--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "bootstrap": "^5.2.0",
     "cors": "^2.8.5",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
+    "formidable": "^2.0.1",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0",
-    "ejs": "^3.1.8",
-    "bcrypt": "^5.0.1"
+    "passport-local": "^1.0.0"
   }
 }
