--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "formidable": "^2.0.1",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "sqlite3": "^5.1.1"
   }
 }
